(CHORE) updated ci (#16)